crates/ruff_linter/src/rules/pandas_vet/snapshots/ruff_linter__rules__pandas_vet__tests__PD901_fail_df_var.snap
---
source: crates/ruff_linter/src/rules/pandas_vet/mod.rs
---
PD901 Avoid using the generic variable name `df` for DataFrames
 --> <filename>:3:1
  |
2 | import pandas as pd
3 | df = pd.DataFrame()
  | ^^
