crates/ruff_linter/src/rules/pandas_vet/snapshots/ruff_linter__rules__pandas_vet__tests__pandas-use-of-dot-read-table_pandas_use_of_dot_read_table.py.snap
---
source: crates/ruff_linter/src/rules/pandas_vet/mod.rs
---
PD012 Use `.read_csv` instead of `.read_table` to read CSV files
 --> pandas_use_of_dot_read_table.py:4:6
  |
3 | # Errors.
4 | df = pd.read_table("data.csv", sep=",")
  |      ^^^^^^^^^^^^^
5 | df = pd.read_table("data.csv", sep=",", header=0)
6 | filename = "data.csv"
  |

PD012 Use `.read_csv` instead of `.read_table` to read CSV files
 --> pandas_use_of_dot_read_table.py:5:6
  |
3 | # Errors.
4 | df = pd.read_table("data.csv", sep=",")
5 | df = pd.read_table("data.csv", sep=",", header=0)
  |      ^^^^^^^^^^^^^
6 | filename = "data.csv"
7 | df = pd.read_table(filename, sep=",")
  |

PD012 Use `.read_csv` instead of `.read_table` to read CSV files
 --> pandas_use_of_dot_read_table.py:7:6
  |
5 | df = pd.read_table("data.csv", sep=",", header=0)
6 | filename = "data.csv"
7 | df = pd.read_table(filename, sep=",")
  |      ^^^^^^^^^^^^^
8 | df = pd.read_table(filename, sep=",", header=0)
  |

PD012 Use `.read_csv` instead of `.read_table` to read CSV files
  --> pandas_use_of_dot_read_table.py:8:6
   |
 6 | filename = "data.csv"
 7 | df = pd.read_table(filename, sep=",")
 8 | df = pd.read_table(filename, sep=",", header=0)
   |      ^^^^^^^^^^^^^
 9 |
10 | # Non-errors.
   |
